# telerust

./: .env  Cargo.toml  readme.md
migrations/: 20210107183844_init.sql
src/: main.rs
src/app/account/: model.rs  route.rs
src/app/project/: model.rs  route.rs
src/middlewares/: auth.rs
