[package]
name = "telerust-rocket"
version = "0.1.0"
authors = ["Utwo <mihai.legat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git ="https://github.com/SergioBenitez/Rocket", branch="master" }
rocket_contrib = { git ="https://github.com/SergioBenitez/Rocket", branch="master" }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch="master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.4.2", features = [ "postgres", "uuid", "json", "chrono", "runtime-async-std-native-tls", "migrate" ] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
slug = "0.1"
rand = "0.8"
firestore-db-and-auth = "0.6.1"
jwks-client = "0.2.0"
tokio = { version = "0.2.25", features = ["full"] }